--- a/wp-content/themes/sutunam/scss/component/_home-info.scss
+++ b/wp-content/themes/sutunam/scss/component/_home-info.scss
@@ -36,6 +36,17 @@
                 font-size: 30px;
                 font-size: 2.08vw;
             }
+            a + a {
+                margin-top: 8px;
+            }
+        }
+    }
+
+    @include bp(max-width, $mobile) {
+        .info {
+            a + a {
+                margin-top: 20px;
+            }
         }
     }
 }
